<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="ver"
        android:title="@string/version"
        android:summary="@string/version"/>

    <CheckBoxPreference
        android:key="call_alert"
        android:title="@string/call_alert"
        android:summary="@string/call_alert_sub"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="sms_alert"
        android:title="@string/sms_alert"
        android:summary="@string/sms_alert_sub"
        android:defaultValue="true" />

    <Preference
        android:key="guid"
        android:title="@string/myguid"
        android:summary="@string/myguid"/>

    <Preference
        android:key="src"
        android:title="@string/get_src"
        android:summary="@string/get_src_sub"/>

    <Preference
        android:key="web"
        android:title="@string/web"
        android:summary="@string/web_sub"/>


</PreferenceScreen>
