<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context="org.bullshitbankdb.android.Intro"
    android:background="?colorPrimary"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="16dp">

    

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" 
        android:src="@drawable/bullshitpictogram"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/textViewdesc"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/confirm"
        android:id="@+id/confirm"
        android:layout_marginTop="8dp"/>
</LinearLayout>
